--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="intro">
     <div class="container">
         <div class="intro__illustration">
-            <img src="img/illustration.svg" alt="illustration">
+            <img src="img/Illustration.svg" alt="illustration">
         </div>
         <div class="intro__content">
             <div class="intro__textbox">
